Adds score calculator initial implementation